2006-06-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_permit/Makefile.am: Include Make.xml.rules.
	* modules/pam_permit/pam_permit.8.xml: New.
	* modules/pam_permit/pam_permit.8: New, generated from xml file.
	* modules/pam_permit/README.xml: New.
	* modules/pam_permit/README: Regenerated from xml file.

	* modules/pam_nologin/Makefile.am: Include Make.xml.rules.
	* modules/pam_nologin/pam_nologin.8.xml: New.
	* modules/pam_nologin/pam_nologin.8: Regenerated from xml file.
	* modules/pam_nologin/README.xml: New.
	* modules/pam_nologin/README: Regenerated from xml file.

2006-06-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_motd/Makefile.am: Include Make.xml.rules.
	* modules/pam_motd/pam_motd.8.xml: New.
	* modules/pam_motd/pam_motd.8: New, generated from xml file.
	* modules/pam_motd/README.xml: New.
	* modules/pam_motd/README: New, generated from xml file.

2006-06-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_mail/Makefile.am: Include Make.xml.rules.
	* modules/pam_mail/pam_mail.8.xml: New.
	* modules/pam_mail/pam_mail.8: New, generated from xml file.
	* modules/pam_mail/README.xml: New.
	* modules/pam_mail/README: Regenerated from xml file.

	* modules/pam_localuser/Makefile.am: Include Make.xml.rules.
	* modules/pam_localuser/pam_localuser.8.xml: New.
	* modules/pam_localuser/pam_localuser.8: New, generated from xml file.
	* modules/pam_localuser/README.xml: New.
	* modules/pam_localuser/README: Regenerated from xml file.

	* doc/man/PAM.8: Regenerate with DocBook XSL Stylesheets v1.70.1.
	* doc/man/pam.3: Likewise.
	* doc/man/pam.conf.5: Likewise.
	* doc/man/pam_acct_mgmt.3: Likewise.
	* doc/man/pam_authenticate.3: Likewise.
	* doc/man/pam_chauthtok.3: Likewise.
	* doc/man/pam_close_session.3: Likewise.
	* doc/man/pam_conv.3: Likewise.
	* doc/man/pam_end.3: Likewise.
	* doc/man/pam_error.3: Likewise.
	* doc/man/pam_fail_delay.3: Likewise.
	* doc/man/pam_get_data.3: Likewise.
	* doc/man/pam_get_item.3: Likewise.